fix: adapted the readme guide about generating JARs, integrating JMEOS in a project and running it correctly